--- a/src/Components/Banner/index.module.scss
+++ b/src/Components/Banner/index.module.scss
@@ -1,6 +1,23 @@
+.bannerContainer {
+  position: relative;
+}
+
 .bannerContainer img {
   width: 100%;
   height: 223px;
   object-fit: cover;
   border-radius: 25px;
+  filter: brightness(0.7);
+}
+
+.banner__text {
+  font-size: 45px;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  text-align: center;
+  width: 100%;
 }
