--- a/src/Components/Header/index.module.scss
+++ b/src/Components/Header/index.module.scss
@@ -2,7 +2,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 0;
+  padding: 40px 0;
 }
 
 nav ul {
@@ -10,8 +10,16 @@ nav ul {
   display: flex;
 }
 
+nav ul li {
+  padding-left: 40px;
+}
+
 nav ul li a {
-  padding-left: 30px;
   text-decoration: none;
   color: #ff6060;
+  font-size: 24px;
+}
+
+.active {
+  border-bottom: 2px solid #ff6060;
 }
