--- a/src/Components/Header/index.module.scss
+++ b/src/Components/Header/index.module.scss
@@ -2,7 +2,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 0;
+  max-width: 1240px;
+  padding: 50px;
+  margin: auto;
 }
 
 nav ul {
