--- a/src/Components/Slider/index.module.scss
+++ b/src/Components/Slider/index.module.scss
@@ -12,7 +12,7 @@
 }
 
 .arrow {
-  font-size: 55px;
+  font-size: 100px;
   cursor: pointer;
   padding: 0 20px;
 }
@@ -25,4 +25,5 @@
   width: 100%;
   height: 415px;
   object-fit: cover;
+  border-radius: 25px;
 }
