--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -1,5 +1,7 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 main {
@@ -12,6 +14,5 @@ main {
   font-family: "Montserrat", sans-serif;
   width: 100%;
   max-width: 1440px;
-  box-sizing: border-box;
   margin: auto;
 }
