--- a/src/Components/Error/index.module.scss
+++ b/src/Components/Error/index.module.scss
@@ -1,28 +1,48 @@
-.codeError {
-  font-size: 288px;
-  text-align: center;
-  color: #ff6060;
-  font-weight: 700;
-}
+$main-color: #ff6060;
+$breakpoint-small: 768px;
 
-.errorTextContent {
-  text-align: center;
-  color: #ff6060;
-  font-size: 36px;
-}
+@import "../../utils/style/global.module.scss";
 
-.errorHomeLink {
-  border-bottom: 1px solid #ff6060;
-  text-align: center;
-  color: #ff6060;
-  display: inline;
-}
+.error {
+  &__code {
+    font-size: 288px;
+    text-align: center;
+    color: $main-color;
+    font-weight: 700;
 
-.errorLinkContainer {
-  margin: 60px 0;
-  text-align: center;
-}
+    @media (max-width: $breakpoint-small) {
+      font-size: 96px;
+      margin: 70px auto;
+    }
+  }
 
-.errorLinkContainer a {
-  text-decoration: none;
+  &__text {
+    text-align: center;
+    color: $main-color;
+    font-size: 36px;
+
+    @media (max-width: $breakpoint-small) {
+      font-size: $font-size-medium;
+    }
+  }
+
+  &__link__wrapper {
+    margin: 60px 0;
+    text-align: center;
+
+    a {
+      text-decoration: none;
+
+      p {
+        border-bottom: 1px solid $main-color;
+        text-align: center;
+        color: $main-color;
+        display: inline;
+
+        @media (max-width: $breakpoint-small) {
+          font-size: 14px;
+        }
+      }
+    }
+  }
 }
