--- a/src/Components/Slider/index.module.scss
+++ b/src/Components/Slider/index.module.scss
@@ -1,39 +1,58 @@
-.container {
+$secondary-color: #fff;
+$breakpoint-small: 768px;
+
+@import "../../utils/style/global.module.scss";
+
+.slider {
   position: relative;
-}
 
-.arrowContainer {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
+  &__img {
+    width: 100%;
+    height: 415px;
+    object-fit: cover;
+    border-radius: 25px;
 
-.arrow {
-  font-size: 100px;
-  cursor: pointer;
-  padding: 0 20px;
-}
+    @media (max-width: $breakpoint-small) {
+      height: 255px;
+      border-radius: 10px;
+    }
+  }
 
-.arrow polygon {
-  fill: white;
-}
+  &__arrows {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 
-.container img {
-  width: 100%;
-  height: 415px;
-  object-fit: cover;
-  border-radius: 25px;
-}
+    > svg {
+      font-size: 100px;
+      cursor: pointer;
+      padding: 0 20px;
 
-.currentImageIndicator {
-  color: #fff;
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 30px;
-  font-size: 18px;
-  left: 50%;
-  transform: translateX(-50%);
+      @media (max-width: $breakpoint-small) {
+        font-size: 40px;
+        padding: 0 5px;
+      }
+
+      polygon {
+        fill: $secondary-color;
+      }
+    }
+  }
+
+  &__currentImageIndicator {
+    color: $secondary-color;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 30px;
+    font-size: $font-size-medium;
+    left: 50%;
+    transform: translateX(-50%);
+
+    @media (max-width: $breakpoint-small) {
+      display: none;
+    }
+  }
 }
