--- a/src/Pages/ApartmentDescription/index.module.scss
+++ b/src/Pages/ApartmentDescription/index.module.scss
@@ -1,64 +1,133 @@
-.containerDescription {
-  margin: 40px 0;
-}
+$main-color: #ff6060;
+$secondary-color: #fff;
+$breakpoint-small: 768px;
+
+@import "../../utils/style/global.module.scss";
 
 .description {
-  display: flex;
-  justify-content: space-between;
-  color: #ff6060;
-  margin-bottom: 40px;
-}
+  margin: 25px 0 40px 0;
 
-.description__left__title {
-  font-size: 36px;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
+  @media (max-width: $breakpoint-small) {
+    margin-bottom: 10px;
+  }
 
-.description__left__location {
-  font-size: 18px;
-  font-weight: 400;
-  margin-bottom: 20px;
-}
+  &__general {
+    display: flex;
+    justify-content: space-between;
+    color: $main-color;
+    margin-bottom: 35px;
 
-.description__tags__tag {
-  background-color: #ff6060;
-  color: #fff;
-  padding: 5px 30px;
-  border-radius: 10px;
-  margin-right: 15px;
-}
+    @media (max-width: $breakpoint-small) {
+      flex-direction: column;
+      margin-bottom: 20px;
+    }
 
-.desciption__tags {
-  display: flex;
-}
+    .left__block {
+      max-width: 70%;
 
-.description__host {
-  display: flex;
-  align-items: center;
-}
+      &__title {
+        font-size: 36px;
+        font-weight: 500;
+        margin-bottom: 8px;
 
-.description__host p {
-  font-size: 18px;
-}
+        @media (max-width: $breakpoint-small) {
+          font-size: $font-size-medium;
+        }
+      }
 
-.description__host img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-left: 20px;
-}
+      &__location {
+        font-size: $font-size-medium;
+        font-weight: 400;
+        margin-bottom: 25px;
 
-.accordions {
-  display: flex;
-  justify-content: space-between;
-}
+        @media (max-width: $breakpoint-small) {
+          font-size: 14px;
+          margin-bottom: 15px;
+        }
+      }
+    }
 
-.accordions > div:first-child {
-  width: 45%;
-}
+    .right__block {
+      text-align: right;
 
-.accordions > div:nth-child(2) {
-  width: 45%;
+      @media (max-width: $breakpoint-small) {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+      }
+
+      &__host {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+
+        @media (max-width: $breakpoint-small) {
+          margin: 0;
+        }
+
+        > p {
+          font-size: $font-size-medium;
+
+          @media (max-width: $breakpoint-small) {
+            font-size: 12px;
+          }
+        }
+
+        > img {
+          width: 65px;
+          height: 65px;
+          border-radius: 50%;
+          object-fit: cover;
+          margin-left: 20px;
+
+          @media (max-width: $breakpoint-small) {
+            width: 32px;
+            height: 32px;
+          }
+        }
+      }
+
+      &__rate {
+        display: flex;
+
+        img {
+          object-fit: contain;
+
+          @media (max-width: $breakpoint-small) {
+            width: 18px;
+          }
+        }
+      }
+    }
+  }
+
+  &__detailed {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: $breakpoint-small) {
+      flex-direction: column;
+
+      p {
+        font-size: 13px;
+      }
+    }
+
+    > :first-child {
+      padding: 0 30px 0 0;
+
+      @media (max-width: $breakpoint-small) {
+        padding: 0;
+        margin-bottom: 20px;
+      }
+    }
+
+    > :nth-child(2) {
+      padding: 0 0 0 30px;
+
+      @media (max-width: $breakpoint-small) {
+        padding: 0;
+      }
+    }
+  }
 }
